<resources>
    <string name="app_name">Box4U ToolBox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="kamera">Kamera</string>
    <string name="galeria">Galeria</string>
    <string name="ustawienia_lasera">Ustawienia lasera</string>
    <string name="cennik">Cennik</string>
    <string name="magazyn">Magazyn</string>
    <string name="wydruki">Wydruki</string>
    <string name="box4u_ebay_store_gmail_com">box4u.ebay.store@gmail.com</string>
    <string name="box4u">Box4U</string>
    <string name="ustawienia">Ustawienia</string>

    <string name="title_menu">Tu bedzie temperatura</string>
    <string name="title_kamera">Tu bedzie podglad kamery</string>
    <string name="title_laser">Tu bedzie lista ustawien lasera</string>
    <string name="title_cennik">Zawartosc cennika</string>
    <string name="title_magazyn">Tu bedzie spis przedmiotow</string>
    <string name="title_wydruki">Tu bedzie lista wydrukow</string>
    <string name="todo">TODO</string>
    <string name="pic_1">pic_1</string>
    <string name="pic_2">pic_2</string>
    <string name="tlo_1" />

</resources>